# user_management

./: README.md  migrate_role_to_roles.py  migrate_user_refs.py  pyproject.toml  start.sh
docs/: EMAIL_CONFIGURATION.md  HIERARCHY_API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  testing.md
scripts/: rollback_user_refs.py
src/users/: main.py  start.sh
src/users/config/: config.py  logging_config.py
src/users/controllers/: admin_controller.py  hierarchy_controller.py  user_controller.py
src/users/models/: domain.py
src/users/repositories/: audit_repository.py  permission_repository.py  role_repository.py  user_repository.py
src/users/scripts/: seed_data.py
src/users/services/: email_service.py  otp_service.py  permission_service.py  role_service.py  user_service.py
src/users/utils/: db.py  events.py  redis_client.py  response_util.py  security.py
tests/: conftest.py
tests/config/: settings.py
tests/functional/: test_admin_controller.py  test_hierarchy_controller.py  test_user_controller.py
tests/utils/: api_client.py
